# curv4q

./: Cargo.toml  README.md  build.rs
.github/workflows/: curv4q.yml
fourq/: FourQ.h  FourQ_api.h  FourQ_internal.h  kex.c  schnorrq.c  sha512.c
src/: lib.rs
